--- a/css/about-phn.css
+++ b/css/about-phn.css
@@ -11,8 +11,7 @@
     .menu{
         width:25px;
         height:25px;
-        position:relative;
-        right:-90%;
+        float:right;
         display:block;
       }
       
