--- a/css/android.css
+++ b/css/android.css
@@ -16,8 +16,7 @@
     .menu{
     width:25px;
     height:25px;
-    position:relative;
-    right:-90%;
+    float:right;
     display:block;
   }
   
